# rust-time-communication-hub

./: .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  rust_time_communication_hub.db  sqlx-data-mysql.json  sqlx-data-postgres.json  sqlx-data-sqlite.json  sqlx-data.json
.github/workflows/: main.yml
migrations/mysql/: 20230409083408_database_v0.sql
migrations/postgres/: 20230409083408_database_v0.sql
migrations/sqlite/: 20230409083408_database_v0.sql
playground/: package.json  pnpm-lock.yaml  svelte.config.js
playground/src/components/: Chat.svelte
playground/src/routes/: +layout.svelte  +page.svelte
src/: error.rs  hub.rs  hub_manager.rs  lib.rs  main.rs  sse_handler.rs
src/core/: jwt.rs
src/domain/: mod.rs
src/domain/auth/: controller.rs  mod.rs  service.rs
src/domain/auth/dto/: auth.rs  claims.rs
src/domain/dto/: error.rs  list_view.rs  mod.rs  validator.rs
src/domain/group/: mod.rs
src/domain/message/: controller.rs  mod.rs  service.rs
src/domain/message/dto/: message.rs
src/domain/sse/: controller.rs  mod.rs  service.rs
src/domain/sse/dto/: sse.rs
src/domain/user/: controller.rs  mod.rs  service.rs
src/hub/: hub_connection.rs  hub_event_message.rs  hub_packet.rs  hub_server.rs  mod.rs
src/repository/: mod.rs  repository_base.rs
src/repository/models/: group.rs  message.rs  user.rs
src/repository/repositories/: group_repository.rs  message_repository.rs  mod.rs  user_repository.rs
src/servers/: mod.rs  server_admin.rs  server_sse.rs
tests/: basic.rs
tests/common/: api_client.rs
