[package]
name = "rust-time-communication-hub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

# members = [
#     "test_consumer",
# ]

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.68"
axum = { version = "0.6.12", features = ["headers"] }
axum-macros = "0.3.7"
chrono = "0.4.24"
dotenvy = "0.15.7"
futures = "0.3.27"
futures-util = "0.3.27"
headers = "0.3.8"
hyper = "0.14.25"
jsonwebtoken = "8.3.0"
parking_lot = "0.12.1"
serde = { version = "1.0.158", features = ["derive"] }
sqlx = { version = "0.6.3", features = [
    "runtime-tokio-native-tls",
    "any",
    "sqlite",
    "postgres",
    "mysql",
    "chrono",
] }
thiserror = "1.0.40"
tokio = { version = "1.26.0", features = ["full"] }
tokio-stream = "0.1.12"
tower-http = { version = "0.4.0", features = ["trace", "cors"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
validator = { version = "0.16.0", features = ["derive"] }

[dev-dependencies]
reqwest = { version = "0.11.16", features = ["json"] }
reqwest-eventsource = "0.4.0"
